--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,82 @@
 body {
-    background-color: #EDEDED;
-    display: flex;
-    justify-content: center;
-}
-
-#container {
-    background-color: white;
-    width: 679px;
-    height: 838px;
-    border-radius: 40px;
-    display: flex;
-    justify-content: center;
+	background-color: #ededed;
+	display: flex;
+	justify-content: center;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 #task-input {
-    width: 600px;
-    height: 45px;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    border: 2px solid #EBEBEB;
-    padding-left: 15px;
-    color: #5E5E5E;
-    margin-top: 5px;
-    outline: none;
+	width: 600px;
+	height: 45px;
+	font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
+	border: 2px solid #ebebeb;
+	padding-left: 15px;
+	color: #5e5e5e;
+	margin-top: 5px;
+	outline: none;
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    margin-top: 27px;
-    margin-bottom: 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 36px;
+	margin-top: 27px;
+	margin-bottom: 0px;
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    margin-top: 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: 300;
+	font-size: 14px;
+	margin-top: 0px;
 }
 
 ol {
-    padding: 0;
+	padding: 0;
 }
 
 .task {
-    font-family: Arial, Helvetica, sans-serif;
-    list-style: none;
-    padding-left: 0px;
-    width: 100%;
-    height: 70px;
-    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    margin-top: 11px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
+	list-style: none;
+	padding-left: 0px;
+	width: 100%;
+	height: 70px;
+	box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 15px;
+	margin-top: 11px;
+	background-color: white;
+	display: flex;
+	align-items: center;
+	font-size: 18px;
 }
 
 .completed-task {
-    background-color: #E0FFE3;
-    text-decoration: line-through;
+	background-color: #e0ffe3;
+	text-decoration: line-through;
 }
 
 .button {
-    background-color: white;
-    outline: none;
-    margin: 0 10px 0 12px;
-    border-radius: 12px;
-    border: 4px solid #e3e3e3;
-    height: 40px;
-    width: 40px;
-    transition: border-width 0.1s;
-    transition-timing-function: linear;
+	background-color: white;
+	outline: none;
+	margin: 0 10px 0 12px;
+	border-radius: 12px;
+	border: 4px solid #e3e3e3;
+	height: 40px;
+	width: 40px;
+	transition: border-width 0.1s;
+	transition-timing-function: linear;
 }
 
 .completed-button {
-    border-color: #9BD796;
-    border-width: 5px;
+	border-color: #9bd796;
+	border-width: 5px;
 }
 
 .button:hover {
-    border-width: 5px;
+	border-width: 5px;
 }
